<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ChoiceAndroid</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="reset">Reset</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="votetitle">Vote Title</string>
    <string name="addcase">Add Case</string>
    <string name="postvote">Post Vote</string>
    <string name="vote">Vote</string>
</resources>