<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ChoiceAndroid" >
    
    <EditText
         android:id="@+id/editText_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"
         android:ems="10"
         android:hint="@string/votetitle">
        <requestFocus />
    </EditText>
	
    <Button
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText_title"
        android:layout_alignRight="@+id/editText_title"
        android:layout_below="@+id/editText_title"
        android:layout_marginTop="20dp"
        android:text="@string/addcase" />
    
    <Button
        android:id="@+id/button_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText_title"
        android:layout_alignRight="@+id/editText_title"
        android:layout_below="@+id/editText_title"
        android:layout_marginTop="70dp"
        android:text="@string/postvote" />
    
</RelativeLayout>